--- a/dewey.properties.tmpl
+++ b/dewey.properties.tmpl
@@ -7,8 +7,7 @@ dewey.environment-name          = {{ env "DE_ENV" }}
 
 {{ with $v := (key (printf "%s/amqp/uri" $base)) }}dewey.events.amqp.uri = {{ $v }}{{ end }}
 
-{{ with $v := (key (printf "%s/elasticsearch/host" $base)) }}dewey.es.host = {{ $v }}{{ end }}
-{{ with $v := (key (printf "%s/elasticsearch/port" $base)) }}dewey.es.port = {{ $v }}{{ end }}
+{{ with $v := (key (printf "%s/elasticsearch/base" $base)) }}dewey.es.uri = {{ $v }}{{ end }}
 
 {{ with $v := (key (printf "%s/irods/host" $base)) }}dewey.irods.host = {{ $v }}{{ end }}
 {{ with $v := (key (printf "%s/irods/port" $base)) }}dewey.irods.port = {{ $v }}{{ end }}
